<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ru.redsoft.ora2rdb</groupId>
  <artifactId>ora2rdb-root</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>ora2rdb-root</name>
  <description>ora2rdb Root Project</description>
  <organization>
    <name>RED SOFT</name>
    <url>https://www.red-soft.ru/</url>
  </organization>

  <properties>
    <ora2rdb.version>${project.version}</ora2rdb.version>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <jdk.version>11</jdk.version>

    <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
    <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
    <maven-source-plugin.version>3.2.0</maven-source-plugin.version>
    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
    <maven-javadoc-plugin.version>3.4.0</maven-javadoc-plugin.version>
    <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
    <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
    <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
    <maven-assembly-plugin.version>3.2.0</maven-assembly-plugin.version>

    <releasehub.plugin.version>1.1</releasehub.plugin.version>

    <antlr.version>4.12.0</antlr.version>
    <assertj.core.version>3.23.1</assertj.core.version>
    <mockito.core.version>4.10.0</mockito.core.version>
    <junit.jupiter.version>5.9.2</junit.jupiter.version>
    <jacoco.version>0.8.8</jacoco.version>

  </properties>

  <modules>
    <!-- <module>grammars-v4</module> -->
    <module>ora2rdb</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>${junit.jupiter.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>${junit.jupiter.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-params</artifactId>
        <version>${junit.jupiter.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj.core.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito.core.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-inline</artifactId>
        <version>${mockito.core.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-junit-jupiter</artifactId>
        <version>${mockito.core.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <profiles>
    <profile>
      <id>deploy-internal</id>
      <distributionManagement>
        <snapshotRepository>
          <id>artifactory</id>
          <url>http://artifactory.red-soft.biz/red-database-unstable</url>
        </snapshotRepository>
        <repository>
          <id>artifactory</id>
          <url>http://artifactory.red-soft.biz/red-database-release</url>
        </repository>
      </distributionManagement>
      <pluginRepositories>
        <pluginRepository>
          <id>artifactory-plugins-snapshot</id>
          <name>Red Soft plugins</name>
          <url>http://artifactory.red-soft.biz/plugins-snapshot</url>
          <layout>default</layout>
          <snapshots>
            <enabled>true</enabled>
          </snapshots>
        </pluginRepository>
        <pluginRepository>
          <id>artifactory-plugins-release</id>
          <name>Red Soft plugins</name>
          <url>http://artifactory.red-soft.biz/plugins-release</url>
          <layout>default</layout>
          <snapshots>
            <enabled>false</enabled>
          </snapshots>
        </pluginRepository>
      </pluginRepositories>
      <build>
        <pluginManagement>
          <plugins>
            <plugin>
              <groupId>ru.red-soft.maven.plugin</groupId>
              <artifactId>releasehub-build-plugin</artifactId>
              <version>${releasehub.plugin.version}</version>
              <executions>
                <execution>
                  <id>deploy</id>
                  <phase>deploy</phase>
                  <goals>
                    <goal>register</goal>
                  </goals>
                </execution>
              </executions>
              <configuration>
                <releaseHubProject>ora2rdb</releaseHubProject>
              </configuration>
            </plugin>
            <plugin>
              <groupId>ru.red-soft.maven.plugin</groupId>
              <artifactId>releasehub-reports-plugin</artifactId>
              <version>${releasehub.plugin.version}</version>
              <executions>
                <execution>
                  <id>upload-reports</id>
                  <phase>test</phase>
                  <goals>
                    <goal>upload</goal>
                  </goals>
                </execution>
              </executions>
              <configuration>
                <reportName>ora2rdb_jdk${jdk.version}</reportName>
                <releaseHubProject>ora2rdb</releaseHubProject>
              </configuration>
            </plugin>
          </plugins>
        </pluginManagement>
        <plugins>
          <plugin>
            <groupId>ru.red-soft.maven.plugin</groupId>
            <artifactId>releasehub-build-plugin</artifactId>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>${build-helper-maven-plugin.version}</version>
          <executions>
            <execution>
              <phase>initialize</phase>
              <id>parse-version</id>
              <goals>
                <goal>parse-version</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-source-plugin</artifactId>
          <version>${maven-source-plugin.version}</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>${maven-javadoc-plugin.version}</version>
          <configuration>
            <notimestamp>true</notimestamp>
          </configuration>
          <executions>
            <execution>
              <id>attach-javadocs</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>${maven-release-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>${maven-deploy-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven-jar-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>${maven-assembly-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
